Provide a place to store common CMake initialization scripts at ${databus_SOURCE_DIR}/build-helpers/cmake/CMakeLists.txt (DRIVE-95)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,9 @@ project(databus)
 message(STATUS "databus_SOURCE_DIR = ${databus_SOURCE_DIR}")
 message(STATUS "databus_BINARY_DIR = ${databus_BINARY_DIR}")
 
+include(${databus_SOURCE_DIR}/build-helpers/cmake/CMakeLists.txt)
 
 #-----------------------------------------------------------------------------
-# Generate type handling code and build type libraries
+# Generate type handling code + build type libraries
 add_subdirectory("res/types")
+#-----------------------------------------------------------------------------
