Fix relative paths for XML generation from IDL (DRIVE-95)

--- a/res/types/data/CMakeLists.txt
+++ b/res/types/data/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory("perception")
 add_subdirectory("planning")
 add_subdirectory("actuation")
 add_subdirectory("gateway")
+add_subdirectory("demo")
