Do not generate XML from service IDL files. Those are for static codegen only, and mirror the constants for services defined in the *_svc.xml files

--- a/res/types/CMakeLists.txt
+++ b/res/types/CMakeLists.txt
@@ -56,6 +56,7 @@ set(IDLs
   # Services
   services/Drive_bus_t.idl
   services/CAN_svc_t.idl
+  services/Shapes_svc_t.idl
 )
 
 list(LENGTH IDLs IDLs_length)
